# Reversi

./: AIPlayer.cpp  AIPlayer.h  ALPlayer.cpp  ALPlayer.h  Board.h  BoardConsole.cpp  BoardConsole.h  CMakeLists.txt  Client.cpp  Client.h  Game.cpp  Game.h  Logic.h  Menu.h  MenuConsole.cpp  MenuConsole.h  PersonP.cpp  PersonP.h  PersonPServer.cpp  PersonPServer.h  Player.h  Point.cpp  Point.h  PrintConsole.cpp  PrintConsole.h  PrintMassage.h  RemotePlayer.cpp  RemotePlayer.h  Server.cpp  Server.h  StandartLogic.cpp  StandartLogic.h  info  main.cpp  makefile
exe/: client.out  server.out
src/client/: AIPlayer.cpp  AIPlayer.h  BoardConsole.cpp  BoardConsole.h  Client.cpp  Client.h  Game.cpp  Game.h  Menu.h  MenuConsole.cpp  MenuConsole.h  PersonP.cpp  PersonP.h  PersonPServer.cpp  PersonPServer.h  Player.h  Point.cpp  Point.h  PrintConsole.cpp  PrintConsole.h  PrintMassage.h  RemotePlayer.cpp  RemotePlayer.h  StandartLogic.cpp  StandartLogic.h  code_design_explanation  main.cpp  makefile
src/client/lib/googletest-release-1.8.0/googlemock/: CMakeLists.txt
src/client/lib/googletest-release-1.8.0/googlemock/include/gmock/internal/: gmock-generated-internal-utils.h
src/client/lib/googletest-release-1.8.0/googlemock/scripts/: fuse_gmock_files.py
src/client/lib/googletest-release-1.8.0/googlemock/scripts/generator/cpp/: keywords.py
src/client/lib/googletest-release-1.8.0/googlemock/src/: gmock-matchers.cc
src/client/lib/googletest-release-1.8.0/googlemock/test/: gmock-generated-actions_test.cc  gmock_ex_test.cc
src/client/lib/googletest-release-1.8.0/googletest/cmake/: internal_utils.cmake
src/client/lib/googletest-release-1.8.0/googletest/include/gtest/: gtest-death-test.h
src/client/lib/googletest-release-1.8.0/googletest/include/gtest/internal/: gtest-internal.h  gtest-port.h
src/client/lib/googletest-release-1.8.0/googletest/samples/: sample1.cc
src/client/lib/googletest-release-1.8.0/googletest/scripts/: fuse_gtest_files.py  upload.py
src/client/lib/googletest-release-1.8.0/googletest/src/: gtest-port.cc  gtest.cc
src/client/lib/googletest-release-1.8.0/googletest/test/: gtest-filepath_test.cc  gtest-typed-test_test.cc  gtest_unittest.cc
src/client/tests/: AIPlayer_test.h  Board_test.h  StandartLogic_test.cpp  StandartLogic_test.h  gtest_main.cpp
src/server/: ClientManager.cpp  ClientManager.h  CloseCommand.cpp  CloseCommand.h  Command.h  GameMembers.cpp  GameMembers.h  JoinCommand.cpp  JoinCommand.h  ListGamesCommand.cpp  ListGamesCommand.h  PlayCommand.cpp  PlayCommand.h  Server.cpp  Server.h  StartCommand.cpp  StartCommand.h  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h  main.cpp  makefile
tests/: AIPlayer_test.cpp  Board_test.cpp  Board_test.h  PersonP_teset.cpp  PersonP_teset.h  StandartLogic_test.cpp  StandartLogic_test.h
